Adaptively MC added and coverage interval.UMC still in process

--- a/1_FFT_and_Reconstruction.ipynb
+++ b/1_FFT_and_Reconstruction.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###### If you have problems with previous step, you can skip conversion into SI units by runing next cell."
+    "###### If you have problems with previous step, you can skip conversion into SI units by running next cell."
    ]
   },
   {
@@ -428,7 +428,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to perform uncertainty evaluation, the PyDynamic software package will be used. To install the package, write `pip install PyDynamic` on your system’s command line.[5]\n",
+    "In order to perform uncertainty evaluation, the PyDynamic software package will be used. It can be installed by pip:  write `%pip install PyDynamic`.\n",
     "The time domain signal is x with associated uncertainty ux as squared standard deviation representing noise variances (sigma²) of the signals x.\n",
     "\n",
     "The result of the DFT is the vector X of real and imaginary parts of the DFT applied to x and the associated uncertainty UX ( covariance matrix associated with  or as a variance in the case of white noise.) When only white noise is considered, all off-diagonal elements of Ux are equal to zero. [5] \n",
